2005-07-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* src/Makefile.am: 
	Use "-c" flag to mkg3states to add "const" tags to data tables.
	(Moves ~135k from unshared/rw data section to shared/ro text section)

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* src/.cvsignore:
	Add .cvsignore files

2005-06-30  Alexander Gottwald  <ago at freedesktop dot org>

	* src/Makefile.am: 
	Fix call of mkg3states    
	remove -no-undefined since liblbxutil has external references to Xfree
	and Xalloc

2005-05-17    <ssp@aware-of-vacuity.boston.redhat.com>

	* configure.ac: Remove rest of half-removed if statement

	* ChangeLog: remove irrelevant entries

2005-04-16  Josh Triplett  <josh@freedesktop.org>

	* Makefile.am: Tell automake about the manpage.